--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,16 @@ asgiref==3.4.1
 astroid==2.8.4
 black==21.10b0
 click==8.0.3
+dj-database-url==0.5.0
 Django==3.1.5
+gunicorn==20.1.0
 isort==5.10.0
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.4.0
+psycopg2-binary==2.9.2
 pylint==2.11.1
 pytz==2021.3
 regex==2021.11.2
@@ -16,4 +19,5 @@ sqlparse==0.4.2
 toml==0.10.2
 tomli==1.2.2
 typing-extensions==3.10.0.2
+whitenoise==5.3.0
 wrapt==1.13.3
